force-app/main/default/objects/Data_Quality_Rule__c/Data_Quality_Rule__c.object-meta.xml
<CustomObject>
    <fullName>Data_Quality_Rule__c</fullName>
    <label>Data Quality Rule</label>
    <pluralLabel>Data Quality Rules</pluralLabel>
    <nameField>
        <displayFormat>DQR-{0000}</displayFormat>
        <label>Data Quality Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <!-- These API access flags must be enabled or disabled together. Enable all to avoid validation error. -->
    <!-- Other settings -->
</CustomObject>