force-app/main/default/objects/Data_Quality_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable this rule. Only active rules are evaluated by the Data Quality Indicator.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>