force-app/main/default/objects/Data_Quality_Rule__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the field on the target object (e.g., StageName, CloseDate, Custom_Field__c)</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>