force-app/main/default/objects/Data_Quality_Rule__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this field is required (vs recommended) for data quality scoring.</description>
</CustomField>