force-app/main/default/objects/Data_Quality_Rule__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>