force-app/main/default/objects/Data_Quality_Rule__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Optional weighting for this field in the completeness score. If blank, defaults to 2 for required and 1 for recommended.</description>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>