force-app/main/default/objects/Data_Quality_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>